[package]
name = "dex-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoincore-rpc = "0.18.0"
bitcoin = { version = "0.31.0", features = ["serde", "rand"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
serde_json = "1.0.116"
serde = { version = "1.0.198", features = ["derive"] }
sha256 = "1.5.0"
anyhow = "1.0.82"
hex = "0.4.3"
borsh = { version = "1.4.0", features = ["derive"] }
ordinals = "0.0.6"